--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile:sass": "node-sass calendar.scss calendar.css"
+    "compile:sass": "node-sass calendar.scss scss-calendar.css -w"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/wbdana/burroughs-calendar/issues"
   },
-  "homepage": "https://github.com/wbdana/burroughs-calendar#readme"
+  "homepage": "https://github.com/wbdana/burroughs-calendar#readme",
+  "dependencies": {
+    "node-sass": "^4.11.0"
+  }
 }
