--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile:sass": "node-sass calendar.scss scss-calendar.css -w"
+    "compile:sass": "node-sass calendar.scss calendar.css -w"
   },
   "repository": {
     "type": "git",
